@@ -108,6 +108,7 @@ for detailed view of each issue, please consult http://issues.apache.org/jira/br
 - IMPROVEMENT: Add a memory cache for the module descriptor that are parsed from the cache (IVY-883)
 - IMPROVEMENT: Improve performance (IVY-872)
 
+- FIX: Ivy#listTokenValues(String, Map) does not filter returned values, and does not use maven-metadata.xml files with IBiblio resolver (IVY-886)
 - FIX: Circular Dependency messages in a resolve do not reflect the configuration used during the resolve (IVY-708)
 - FIX: Failure to transitively install Maven2 artifacts with namespace (IVY-440)
 - FIX: Unwanted eviction of dependencies when optional attributes in dependency and info tags are in consistent (IVY-745)
